projects/airbugclient/static/css/styles.css
html, body {
    height: 100%;
}

.center {
    text-align: center;
}

.column {
    height: 100%;
    position: relative;
}


/* Application CSS
*******************************************************************/

.application-wrapper {
    background-color: rgb(243, 243, 243);
    border-color: rgb(196, 196, 196);
    border-style: solid;
    border-width: 1px;
    bottom: 0px;
    left: -1px;
    position: absolute;
    right: -1px;
    top: 0px;
}

.application {
    height: 100%;
    position: relative;
    width: 100%;
}

.application-body {
    bottom: 0px;
    left: 0px;
    margin-top: 60px;
    overflow: scroll;
    position: absolute;
    right: 0px;
    top: 0px;
}


/* Page CSS
*******************************************************************/

.page {
    bottom: 0px;
    height: auto;
    left: 0px;
    margin-bottom: 2px;
    margin-left: 0;
    margin-right: 0px;
    margin-top: 2px;
    padding: 0;
    position: absolute;
    right: 0px;
    top: 0px;
    width: auto;
}

.rightrow {
    margin-left: 0px;
}


/* Panel CSS
*******************************************************************/

.panel-wrapper {
    background-color: rgb(255, 255, 255);
    border-color: rgb(196, 196, 196);
    border-width: 1px;
    border-style: solid;
    border-radius: 10px;
    bottom: 0px;
    box-shadow: 2px 2px 10px #888888;
    left: 0px;
    margin: 2px;
    position: absolute;
    right: 0px;
    top: 0px;
}

.leftrow .panel-wrapper {
    margin-left: 4px;
}

.rightrow .panel-wrapper {
    margin-right: 4px;
}

.slide-left {
    border-bottom-right-radius: 0;
    border-right-style: none;
    border-top-right-radius: 0;
    margin-left: 20px;
    margin-right: 0px !important;
    padding-right: 0px !important;
}

.panel {
    height: 100%;
    position: relative;
}

.panel-header {
    border-bottom-color: rgb(196, 196, 196);
    border-bottom-width: 1px;
    border-bottom-style: solid;
    height: 34px;
    position: absolute;
    width: 100%;
}

.panel-header-title {
    left: 0px;
    padding: 0px;
    margin-left: 10px;
    margin-right: 35px;
    position: absolute;
    right: 0px;
}

.panel-header-nav {
    line-height: 30px;
    padding-right: 4px;
    padding-top: 1px;
}

.panel-body {
    overflow: scroll;
    width: 100%;
    position: absolute;
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
    margin-top: 35px;
}

.panel-body-no-header {
    margin-top: 0px;
}


/* Box CSS
*******************************************************************/

.box {
    height: 100%;
    position: relative;
    width: 100%;
}

.box-body {
    bottom: 0px;
    left: 0px;
    position: absolute;
    top: 0px;
    width: 100%;
}

.box-with-header .box-body {
    margin-top: 40px;
}

.box-with-footer .box-body {
    margin-bottom: 40px;
}

.box-footer {
    bottom: 0px;
    height: 40px;
    left: 0px;
    position: absolute;
    width: 100%;
}

.box-header {
    font-size: 18px;
    font-weight: 500;
    left: 0px;
    line-height: 32px;
    height: 40px;
    position: absolute;
    top: 0px;
    width: 100%;
}


/* List CSS
*******************************************************************/

.list {

}

.list-item {
    border-bottom-color: rgb(196, 196, 196);
    border-bottom-style: solid;
    border-bottom-width: 1px;
    position: relative;
    width: 100%;
}

.list-item-small {
    height: 34px;
}

.list-item-large {
    height: 68px;
}

.list-item-left {
    height: 100%;
    position: absolute;
    width: 40px;
}

.list-item-center {
    position: absolute;
    margin-left: 40px;
    top: 0px;
    bottom: 0px;
    left: 0px;
    right: 0px;
}


/* Text CSS
*******************************************************************/

.text {
    overflow: hidden;
    white-space: nowrap;
    text-overflow: ellipsis;
}

.text-header {
    font-size: 18px;
    font-weight: 400;
    height: 34px;
    line-height: 34px;
}

.text-simple {
    font-size: 16px;
    font-weight: 200;
    line-height: 34px;
}

.form-wrapper {
    margin-top: 20px;
    margin-left: auto;
    margin-right: auto;
    padding: 20px;
    background-color: rgb(255, 255, 255);
    max-width: 544px;
    border-width: 1px;
    border-color: rgb(196, 196, 196);
    border-style: solid;
    border-radius: 5px;
    box-shadow: 2px 2px 10px #888888;
}

.button-wrapper {
    padding-top: 10px;
    padding-right: 15px;
    padding-left: 15px;
}

.panel-header-nav .button-wrapper {
    padding: 0;
}

.clickable-box {
    cursor: pointer;
}

.clickable-box:active {
    background-color: rgb(206, 225, 243);
}

.user-name {
    position: absolute;
    left: 34px;
    right: 5px;
}

.room-name {
    left: 10px;
    position: absolute;
    right: 5px;
}

.room-member-name {
    position: absolute;
    left: 34px;
    right: 5px;
}

.header {
    width: 100%;
    height: 60px;
    border-bottom-width: 1px;
    border-bottom-color: rgb(196, 196, 196);
    border-bottom-style: solid;
    background-color: rgb(207, 226, 243); /* Old browsers */
    background: -moz-linear-gradient(top, rgb(207,226,243) 0%, rgb(41,137,216) 100%); /* FF3.6+ */
    background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,rgb(207,226,243)), color-stop(100%,rgb(41,137,216))); /* Chrome,Safari4+ */
    background: -webkit-linear-gradient(top, rgb(207,226,243) 0%,rgb(41,137,216) 100%); /* Chrome10+,Safari5.1+ */
    background: -o-linear-gradient(top, rgb(207,226,243) 0%,rgb(41,137,216) 100%); /* Opera 11.10+ */
    background: -ms-linear-gradient(top, rgb(207,226,243) 0%,rgb(41,137,216) 100%); /* IE10+ */
    background: linear-gradient(to bottom, rgb(207,226,243) 0%,rgb(41,137,216) 100%); /* W3C */
    filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#CFE2F3', endColorstr='#2989d8',GradientType=0 ); /* IE6-9 */
}

#header-left {
    width: 40%;
    height: 60px;
    float: left;
}

#header-center {
    width: 20%;
    height: 60px;
    float: left;
}

#header-right {
    width: 40%;
    float: left;
}
/* ... */

